# gpui-router

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/router/: Cargo.toml
crates/router-macros/: Cargo.toml
crates/router-macros/src/: derive_into_layout.rs  lib.rs
crates/router/examples/: basic.rs  nested_router.rs  params.rs  sub_router.rs
crates/router/src/: hooks.rs  layout.rs  lib.rs  nav_link.rs  outlet.rs  route.rs  router.rs  router_tests.rs  routes.rs  state.rs
