[workspace]
resolver = "2"
members = ["crates/router", "crates/router-macros"]
default-members = ["crates/router"]

[workspace.package]
authors = ["迷渡 <justjavac@gmail.com>"]
homepage = "https://github.com/justjavac/gpui-router"
repository = "https://github.com/justjavac/gpui-router"
license = "MIT"
edition = "2024"
readme = "README.md"
publish = false

[workspace.dependencies]
gpui-router = { path = "crates/router" }
gpui-router-macros = { path = "crates/router-macros" }
criterion = "0.7.0"
hashbrown = "0.16.0"
gpui = "0.2.1"
proc-macro2 = "1.0.102"
quote = "1.0.41"
smallvec = "1.15.1"
syn = "2.0.108"
