[package]
name = "gpui-router"
version = "0.2.4"
description = "A router for GPUI App."
keywords = ["gpui", "router", "ui", "framework"]
categories = ["gui"]
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish = true
documentation = "https://docs.rs/gpui-router"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
gpui.workspace = true
gpui-router-macros.workspace = true
hashbrown.workspace = true
matchit = "0.8.6"
smallvec.workspace = true

[dev-dependencies]
criterion.workspace = true
gpui = { workspace = true, features = ["test-support"] }

[features]
default = ["font-kit", "wayland", "x11"]
test-support = ["gpui/test-support"]
inspector = ["gpui/inspector"]
leak-detection = ["gpui/leak-detection"]
runtime_shaders = ["gpui/runtime_shaders"]
macos-blade = ["gpui/macos-blade"]
wayland = ["gpui/wayland"]
x11 = ["gpui/x11"]
font-kit = ["gpui/font-kit"]
screen-capture = ["gpui/scap"]
